08.26/ingress/std20-ingress-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: std20-alb-basic
  annotations:    # 보안 그룹 등 AWS 에 대한 설정들
    alb.ingress.kubernetes.io/scheme: internet-facing # 외부 로드 밸런서 (ip부여) / internal(사설)
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/security-groups: sg-040f4c1a77895c0d0,sg-096f1a39a47ff83ad
    # HTTPS 인증서 정의
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-east-1:925047940866:certificate/84c3701c-2442-40cd-9a64-0c8de938982c
    # HTTP -> HTTPS 리다이렉트(선택사항 / 권장)
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: std20-nginx-service
                port:
                  number: 80
          # - path: /api          # Fastapi : main.py 의 app = FastAPI(root_path="/api")
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: <service-name>
          #       port:
          #         number: 8000
