08.26/ingress/std20-nginx-alb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: std20-nginx-deployment
spec:
# replicas: 3   # HPA를 적용하면 replicas는 HPA가 관리하게 되므로 삭제하는것을 권장.
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  
  selector:
    matchLabels:
      app: std20-nginx


# -----------------------
# pod와 리소스 정의
# -----------------------
  template:
    metadata:
      labels:
        app: std20-nginx
    spec:
      containers:
      - name: std20-nginx-container
        image: nginx:1.31.3-alpine
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:                # 컨테이너 살아있는지를 지속적으로 확인
          httpGet:                 
            path: /                   # 헬스 체크를 위해 요청을 보낼 경로
            port: 80                  # 헬스 체크를 위해 요청을 보낼 포트
          initialDelaySeconds: 30     # 컨테이너가 시작되고 나서 헬스 체크를 시작하기 전까지의 대기 시간
          periodSeconds: 10           # 헬스 체크를 수행하는 주기 (초 단위)
        readinessProbe:               # 컨테이너가 준비되었는지를 지속적으로 확인      
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        
# -----------------------
# 환경 변수 정의
# -----------------------



# -----------------------
# 볼륨 정의
# -----------------------

# -----------------------
# HPA(Horizontal Pod Autoscaler)
# -----------------------
---
apiVersion: v1
kind: Service
metadata:
  name: std20-nginx-service
spec:
  type: ClusterIP   # 외부에서의 접속을 막기 위해.
  selector:
    app: std20-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80




# -----------------------
# Ingress 정의
# -----------------------
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: std20-alb-basic
  annotations:    # 보안 그룹 등 AWS 에 대한 설정들
    alb.ingress.kubernetes.io/scheme: internet-facing # 외부 로드 밸런서 (ip부여) / internal(사설)
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/security-groups: sg-040f4c1a77895c0d0,sg-096f1a39a47ff83ad
    # HTTPS 인증서 정의
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-east-1:925047940866:certificate/84c3701c-2442-40cd-9a64-0c8de938982c
    # HTTP -> HTTPS 리다이렉트(선택사항 / 권장)
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/transforms.std20-nginx-service: >
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              {
                "regex": "^\\/nginx(?:\\/(.*))?$",
                "replace": "/$1"
              }
            ]
          }
        }
      ]
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: std20-nginx-service
                port:
                  number: 80
          # - path: /api          # Fastapi : main.py 의 app = FastAPI(root_path="/api")
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: <service-name>
          #       port:
          #         number: 8000
